@@ -1326,6 +1326,10 @@ name|IOException
 block|{
 if|if
 condition|(
+name|minNrShouldMatch
+operator|==
+literal|0
+operator|&&
 name|clauses
 operator|.
 name|size
