@@ -2435,6 +2435,62 @@ literal|0
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testNoOptionalButMin2
+specifier|public
+name|void
+name|testNoOptionalButMin2
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|/* one required, no optional */
+name|BooleanQuery
+name|q
+init|=
+operator|new
+name|BooleanQuery
+argument_list|()
+decl_stmt|;
+name|q
+operator|.
+name|add
+argument_list|(
+operator|new
+name|TermQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"all"
+argument_list|,
+literal|"all"
+argument_list|)
+argument_list|)
+argument_list|,
+name|BooleanClause
+operator|.
+name|Occur
+operator|.
+name|MUST
+argument_list|)
+expr_stmt|;
+comment|//true,  false);
+name|q
+operator|.
+name|setMinimumNumberShouldMatch
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+comment|// 1 of 0 optional
+name|verifyNrHits
+argument_list|(
+name|q
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|testRandomQueries
 specifier|public
 name|void
